Update: index.html теперь выглядет информативно

--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Конструктор. Движок ККИ Ultimate!</title>
 </head>
 <body>
-<div>Hello!</div>
-<div>I am create new branch!</div>
+<h1>Конструктор. Движок ККИ Ultimate!</h1>
+<hr>
+
+<h2>Механика игры</h2>
+<h3>Основа</h3>
+<label><input type="checkbox" checked disabled>РЕСУРС <input type="text" placeholder="1"></label><br>
+<label><input type="checkbox" checked disabled>ХОД <input type="text" placeholder="1"></label>
+<label><input type="checkbox" checked disabled>ГЕРОЙ <input type="text" placeholder="1"></label>
+<label><input type="checkbox" checked disabled>ПОБЕДА <input type="text" placeholder="false"></label>
+<label><input type="checkbox" checked disabled>СДАТЬСЯ <input type="text" placeholder="false"></label>
+
+<h3>Второстепенные</h3>
+<label><input type="checkbox">Максимум ресурсов <input type="text" placeholder="10"></label>
+<label><input type="checkbox">Количество жизни героя <input type="text" placeholder="30"></label>
+<label><input type="checkbox">Количество мест на столе <input type="text" placeholder="7"></label>
+<label><input type="checkbox">Закончить ход <input type="text" placeholder="false"></label>
+<hr>
+
+<h2>Карты</h2>
+<h3>Основа</h3>
+<label><input type="checkbox" checked disabled>ИМЯ <input type="text" placeholder="Имя карты"></label>
+<label><input type="checkbox" checked disabled>СТОИМОСТЬ <input type="text" placeholder="1"></label>
+<label><input type="checkbox" checked disabled>ЗДОРОВЬЕ <input type="text" placeholder="1"></label>
+<label><input type="checkbox" checked disabled>АТАКА <input type="text" placeholder="1"></label>
+
+<h3>Второстепенные</h3>
+<label><input type="checkbox">Редкость <input type="text" placeholder="обычная"></label>
+<label><input type="checkbox">Способности <input type="text" placeholder="void"></label>
+<label><input type="checkbox">Защита <input type="text" placeholder="0"></label>
+<hr>
+
+<h2>Примеры</h2>
+<ul><p>Механика для игры Hearthstone</p>
+    <li>Количество жизни героя=30</li>
+    <li>Максимум ресурсов=10</li>
+    <li>Количество мест на столе=7</li>
+</ul>
+
+<ul><p>Карта для игры Hearthstone</p>
+    <li>ИМЯ=Крестьянин</li>
+    <li>АТАКА=2</li>
+    <li>Редкость=обычная</li>
+</ul>
+<hr>
+
+    <footer>
+        <a href="https://github.com/Lyumih/ultimate_card_game" target="_blank">
+            Вконтакте: автор проекта
+        </a><br>
+        <a href="https://github.com/Lyumih/ultimate_card_game" target="_blank">
+            GitHub: проект движка ККИ Ultimate
+        </a>
+    </footer>
 </body>
 </html>
